--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <title>Frontend Mentor | Profile card component</title>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Profile card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <!-- Styles -->
+    <link rel="stylesheet" href="../styles/css/compressed/styles.min.css">
 </head>
+
 <body>
-  Victor Crest
-  26
-  London
-
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <div class="grid">
+        <div class="card profile">
+            <div class="card__banner">
+                <img src="../images/bg-pattern-card.svg" alt="card-banner" class="banner">
+                <div class="card__image">
+                    <img src="../images/image-victor.jpg" alt="victor" class="profile__image">
+                </div>
+            </div>
+            <div class="card__content">
+                <div class="profile__basic">
+                    <h3 class="profile__name">Victor Crest <span class="profile__age">26</span></h3>
+                </div>
+                <div class="profile__city">London</div>
+            </div>
+            <div class="card__footer">
+                <div class="footer__item">
+                    <h3 class="footer__amount">80K</h3>
+                    <p class="footer__text">Followers</p>
+                </div>
+                <div class="footer__item">
+                    <h3 class="footer__amount">803K</h3>
+                    <p class="footer__text">Likes</p>
+                </div>
+                <div class="footer__item">
+                    <h3 class="footer__amount">1.4K</h3>
+                    <p class="footer__text">Photos</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.
+    </div> -->
 </body>
+
 </html>
